
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".startScreenActivity"
    android:clickable="true"
    android:onClick="enterApplication"
    android:background="@android:color/background_dark">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/inviteNowStartScreenTitleString"
        android:id="@+id/inviteNowStartScreenTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp"
        android:textColor="#aafff77e"
        android:textSize="50sp" />

    <EditText
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:id="@+id/usernameEditText"
    android:layout_below="@+id/inviteNowStartScreenTitle"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="48dp"
    android:inputType="phone"
    android:hint="enter your phone number"

        />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordEditText"
        android:hint="password"
        android:layout_below="@+id/usernameEditText"
        android:layout_alignLeft="@+id/usernameEditText"
        android:layout_alignStart="@+id/usernameEditText"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:id="@+id/loginButton"
        android:layout_below="@+id/passwordEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:onClick="doLogin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstTimeUser"
        android:id="@+id/firstTimeUser"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/loginButton"
        android:layout_marginTop="40dp"
        android:textColor="#ffffffff" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orSignUpScreen"
        android:id="@+id/orSignUpScreen"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/firstTimeUser"
        android:layout_marginTop="5dp"
        android:textColor="#ffffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:id="@+id/signUpButton"
        android:layout_below="@+id/orSignUpScreen"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="doSignUp"/>

</RelativeLayout>
